<resources>
    <string name="app_name">reservant-mobile</string>
    <string name="label_login_action">Log in</string>
    <string name="label_signup">Sign up</string>
    <string name="label_login">Login</string>
    <string name="label_password">Password</string>
    <string name="error_connection_server">Error while connecting to the server</string>
    <string name="error_register_username_taken">Login is already taken</string>
    <string name="error_register_invalid_request">Invalid register data</string>
    <string name="error_login_wrong_credentials">Incorrect login or password</string>
    <string name="label_password_visibility" translatable="false">Password Visibility</string>
    <string name="label_password_forgot">Forgot my password</string>
    <string name="error_login_invalid">Invalid login</string>
    <string name="label_name">Name</string>
    <string name="label_lastname">Last name</string>
    <string name="error_register_invalid_name">Invalid name</string>
    <string name="label_email">Email address</string>
    <string name="error_register_invalid_email">Invalid email address</string>
    <string name="label_phone">Phone</string>
    <string name="error_register_invalid_phone">Invalid phone number</string>
    <string name="error_register_invalid_password">Password must be 8 characters long, have 1 capital and lowercase letter, 1 digit and 1 special character</string>
    <string name="label_register_repeat_password">Repeat Password</string>
    <string name="error_register_password_match">Passwords must match</string>
    <string name="error_register_invalid_lastname">Invalid lastname</string>
    <string name="label_register_birthday_select">Select your birthday</string>
    <string name="label_register_birthday_dialog">Open date picker dialog</string>
    <string name="label_restaurant_name">Name</string>
    <string name="label_restaurant_nip" translatable="false">NIP</string>
    <string name="label_restaurant_type">Restaurant type</string>
    <string name="label_restaurant_type_bar" translatable="false">Bar</string>
    <string name="label_restaurant_type_restaurant">Restaurant</string>
    <string name="label_restaurant_type_cafe">Cafe</string>
    <string name="label_restaurant_address">Address</string>
    <string name="label_restaurant_postal">Postal code</string>
    <string name="label_restaurant_description">Description</string>
    <string name="label_restaurant_maxReservationDuration">Maximum duration of a reservation (minutes)</string>
    <string name="label_restaurant_city">City</string>
    <string name="label_register_restaurant">Register Restaurant</string>
    <string name="label_restaurant_lease">Lease agreement</string>
    <string name="label_restaurant_license">Alcohol selling license</string>
    <string name="label_restaurant_consent">Business consent</string>
    <string name="label_restaurant_ownerId">ID Card</string>
    <string name="label_add_to_group">Add to group</string>
    <string name="error_unknown">Unknown error</string>
    <string name="error_unauthorized_access">Unauthorized access</string>
    <string name="error_incorrect_login_or_password">Incorrect login or password</string>
    <string name="label_management_edit_local_data">Manage local data</string>
    <string name="label_management_manage_menu">Manage menu</string>
    <string name="label_management_reviews">Reviews</string>
    <string name="label_management_manage_employees">Manage employees</string>
    <string name="label_management_manage_subscription">Manage subscription</string>
...
